src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


.main-page {
    background: radial-gradient(circle, rgb(38, 38, 38) 0%, rgb(27, 27, 30) 100%);
    min-height: 100dvh;
}

.h-dscreen {
    height: 100dvh;
}

.contact-card {
    @apply flex items-center justify-center bg-dark-highlight aspect-square rounded 
}

.glass-effect {
    @apply bg-gray-200 rounded-full bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100
}
.loader {
    display: block;
    --height-of-loader: 4px;
    --loader-color: #F56E0F;
    width: 130px;
    height: var(--height-of-loader);
    border-radius: 30px;
    position: relative;
}

.loader::before {
    content: "";
    position: absolute;
    background: var(--loader-color);
    top: 0;
    left: 0;
    width: 0%;
    height: 100%;
    border-radius: 30px;
    animation: moving 1.5s ease-in-out infinite;
    
}

@keyframes moving {
    50% {
        width: 100%;
    }

    100% {
        width: 0;
        right: 0;
        left: unset;
    }
}

